// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Session /> > renders a finished session 1`] = `
<div
  className="_block_17898c"
>
  <h1
    className="_font-body-md-semibold_1g2sj_69 _sessionName_634806"
    title="session-id"
  >
    session-id
  </h1>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
  >
    Signed in 
    <time
      dateTime="2023-06-29T15:35:17+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
    data-finished={true}
  >
    Finished 
    <time
      dateTime="2023-06-29T15:35:19+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
</div>
`;

exports[`<Session /> > renders an active session 1`] = `
<div
  className="_block_17898c"
>
  <h1
    className="_font-body-md-semibold_1g2sj_69 _sessionName_634806"
    title="session-id"
  >
    session-id
  </h1>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
  >
    Signed in 
    <time
      dateTime="2023-06-29T15:35:17+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
</div>
`;

exports[`<Session /> > uses client name when truthy 1`] = `
<div
  className="_block_17898c"
>
  <h1
    className="_font-body-md-semibold_1g2sj_69 _sessionName_634806"
    title="session-id"
  >
    session-id
  </h1>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
  >
    Signed in 
    <time
      dateTime="2023-06-29T15:35:17+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
    data-finished={true}
  >
    Finished 
    <time
      dateTime="2023-06-29T15:35:19+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
  <p
    className="_font-body-sm-regular_1g2sj_45 _sessionMetadata_634806"
  >
    Client:
     
    <span
      className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
    >
      Element
    </span>
  </p>
</div>
`;

exports[`<Session /> > uses session name when truthy 1`] = `
<div
  className="_block_17898c"
>
  <h1
    className="_font-body-md-semibold_1g2sj_69 _sessionName_634806"
    title="session-id"
  >
    test session name
  </h1>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
  >
    Signed in 
    <time
      dateTime="2023-06-29T15:35:17+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
  <p
    className="_font-body-sm-semibold_1g2sj_49 _sessionMetadata_634806"
    data-finished={true}
  >
    Finished 
    <time
      dateTime="2023-06-29T15:35:19+12:00"
    >
      Thu, 29 Jun 2023, 04:35
    </time>
  </p>
</div>
`;
